--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
