--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "url-parse": "^1.4.3"
   },
   "scripts": {
@@ -18,5 +19,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "jest": "^23.6.0"
+  }
 }
